syntax = "proto3";

option go_package = "./proto";

package grpc_handler;

service Shop {
  rpc List(ListReq) returns (ListResp) {}
}

// Grpc分页请求
// 服务端默认返回 PageSize 个数据
// PageSize 传0，服务端会返回全部数据
message ListReq {
  int32 PageNo = 1;
  int32 PageSize = 2;
  string SortBy = 3;
  repeated string FieldList = 4; // 数据节约，只返指定字段的数据
  int64 ShopId = 5; // 按id筛选
  string ShopName = 6; // 按名称筛选
  repeated int64 ShopIds = 7; // 按ids筛选，
}

message ListResp {
  repeated ShopData Data = 1;
}

message ShopData {
  int64 Id = 1;
  string Name = 2;
  string Desc = 3;
  int64 Count = 4;
  int32 CreateTime = 5;
}